--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ drf-spectacular==0.28.0
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.1.0
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.24.0
 sqlparse==0.5.3
+typing_extensions==4.14.0
 tzdata==2025.2
 uritemplate==4.1.1
